WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59251
REGRESSION (
r84311
): Copy should preserve background color if specified in the body only if the entire content is selected
https://bugs.webkit.org/show_bug.cgi?id=59251
Summary
REGRESSION (r84311): Copy should preserve background color if specified in th...
Enrica Casucci
Reported
2011-04-22 16:08:36 PDT
Repro steps: 1. Launch Safari and navigate to
http://www.yelp.com/biz/cafe-primavera-at-allied-arts-guild-menlo-park-2
2. Select the string "Café Primavera at Allied Arts Guild" 3. Navigate to
http://www.mozilla.org/editor/midasdemo/
4. Click in the editable area and paste Expected The string "Café Primavera at Allied Arts Guild" is displayed in red and nothing else Actual Some additional elements are pasted that provide borders and spacing around the text.
Attachments
Patch
(4.67 KB, patch)
2011-04-27 11:58 PDT
,
Enrica Casucci
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-04-22 16:12:24 PDT
<
rdar://problem/9327044
>
Enrica Casucci
Comment 2
2011-04-27 11:58:22 PDT
Created
attachment 91317
[details]
Patch
Enrica Casucci
Comment 3
2011-04-27 14:18:27 PDT
http://trac.webkit.org/changeset/85090
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug