REGRESSION (r84311): Copy should preserve background color if specified in the body only if the entire content is selected. https://bugs.webkit.org/show_bug.cgi?id=59251 <rdar://problem/9327044>

Reviewed by Darin Adler.

Source/WebCore:

When we are looking for wrapping elements that are presentational, we should
include elements that have a non transparent background color only if they
are not blocks.

Test: editing/pasteboard/do-not-copy-body-color.html

* editing/markup.cpp:
(WebCore::isElementPresentational):

LayoutTests:

* editing/pasteboard/do-not-copy-body-color-expected.txt: Added.
* editing/pasteboard/do-not-copy-body-color.html: Added.



Canonical link: https://commits.webkit.org/74808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85090 268f45cc-cd09-0410-ab3c-d52691b4dbfc